@@ -20,17 +20,18 @@ package org.apache.hop.ui.hopgui;
 import java.text.MessageFormat;
 
 public class ImplementationLoader {
-  public static Object newInstance(final Class type) {
+  public static Object newInstance(final Class<?> type) {
     String name = type.getName();
     Object result = null;
     try {
-      // TODO:
-      // https://stackoverflow.com/questions/234600/can-i-use-class-newinstance-with-constructor-arguments
-      // TODO: https://stackoverflow.com/questions/195321/why-is-class-newinstance-evil
-      result = type.getClassLoader().loadClass(name + "Impl").newInstance();
+      // This loads the implementation of the class type requested
+      // For example, for class Canvas it creates a new instance of CanvasImpl,
+      // HopGui.class gives new HopGuiImpl() and so on.
+      //
+      result = type.getClassLoader().loadClass(name + "Impl").getConstructor().newInstance();
     } catch (Throwable throwable) {
       String txt = "Could not load implementation for {0}";
-      String msg = MessageFormat.format(txt, new Object[] {name});
+      String msg = MessageFormat.format(txt, name);
       throw new RuntimeException(msg, throwable);
     }
     return result;
